# pre-commit-runner

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_runner/: main.py
